--- a/cursos.html
+++ b/cursos.html
@@ -26,15 +26,15 @@
         <li>Coreano</li>
           <li>Italiano</li>
     <h3>Cursos SENAI</h3>
-     <p>EAD Excel básico</p>
-     <p>Desvendando a Descabornização</p>
-     <p> Fluência: Fundamentos: Inteligencia Artficial</p>
-     <p>Segurança Do Trabalho  </p>
-     <p> Ética na intelegencia Artficial </p>
+   <li>EAD Excel básico</li>
+     <li>Desvendando a Descabornização</li>
+     <li> Fluência: Fundamentos: Inteligencia Artficial</li>
+     <li>Segurança Do Trabalho  </li>
+     <li> Ética na intelegencia Artficial </li>
      <h4>Cursos por hobbie</h4>
-     <p>Música</p>
-     <p>Ballet</p>
-     <p>Vôlei</p>
+     <li>Música</li>
+     <li>Ballet</li>
+     <li>Vôlei</li>
      </header>
 
    
