--- a/cursos.html
+++ b/cursos.html
@@ -19,7 +19,7 @@
      <a href="./cursos.html"></a>
     <img src="fefs2.jpg">
 
-         <h1>Fernanda c.r. Ferreira </h1>
+         <h1>Fernanda C.Rodrigues Ferreira </h1>
             <p>Cursos que ja fiz</p>
           </header>
     </main>
