--- a/sobremim.html
+++ b/sobremim.html
@@ -15,7 +15,7 @@
      <a href="./sobre.css"></a>
     <img src="fefs2.jpg">
 
-         <h1>Fernanda c.r. Ferreira </h1>
+         <h1>Fernanda C.Rodrigues Ferreira </h1>
         <p>Estudante de Desenvolvimento de Sistemas</p>
           </header>
     </main>
