--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 
     </header>
     <main>
-        <section class="card">
+       <section class="card">
             <h2>Sobre mim</h2>
-            <a href="sobremim.html">Saiba Mais</a>
+            <a href="sobremim.html" target="_blank">Saiba Mais</a>
         </section>
         <section class=" card">
             <h2>Projeto</h2>
-            <a href="https://github.com/">Ver no github</a>
+            <a href="https://github.com/" target="_blank">Ver no github</a>
         </section>
         <section class=" card">
             <h2>Cursos</h2>
-            <a href="./cursos.html">Meus Cursos</a>
+            <a href="./cursos.html" target="_blank">Meus Cursos</a>
        </section>
     </main>
     <footer class="rodapep">
