--- a/sobremim.html
+++ b/sobremim.html
@@ -12,7 +12,7 @@
 <body>
     <header>
      <h2>Sobre mim</h2>
-     <a href="./sobre.css"></a>
+      <a href="./sobre.css" target="_blank"></a>
     <img src="fefs2.jpg">
 
          <h1>Fernanda C.Rodrigues Ferreira </h1>
