--- a/cursos.html
+++ b/cursos.html
@@ -16,7 +16,7 @@
     <main>
        <header>
      <h2>Cursos</h2>
-     <a href="./cursos.html"></a>
+    <a href="./cursos.html" target="_blank"></a>
     <img src="fefs2.jpg">
 
          <h1>Fernanda C.Rodrigues Ferreira </h1>
