--- a/sobremim.html
+++ b/sobremim.html
@@ -18,7 +18,9 @@
          <h1>Fernanda C.Rodrigues Ferreira </h1>
         <p>Estudante de Desenvolvimento de Sistemas</p>
           </header>
+      
   <header>
+      <main>
         <p>Meu perfil no insta: @_feehzz</p>
         <p>SP/GRU</p>
      <p>16 anos</p>
@@ -29,7 +31,7 @@
      <p> Meu filme favorito é LongLegs  </p>
      <p> ADORO TORTA DE FRANGO!! </p>
      </header>
-
+  </main>
    
     <footer class="rodapep">
         <p>2025 | Site</p>
